--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@
 @tailwind utilities;
 
 /* Ignore errors of @tailwind, they work */
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 36%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+@font-face {
+  font-family: Yeseva;
+  src: url(./fonts/YesevaOne-Regular.ttf);
+}
